# webplayer

./: .gitignore  calling-external-test.html  concurrent-time-sort.py  convert2mp4.py  download_subtitle.py  find_subtitle.py  folder_cache.db  generate_glossary.py  generate_subtitle.py  get_folder_playlist.py  get_music_info.py  getinfo.py  index.html  mixed-time-sort.py  music-app.js  music-player.html  package-lock.json  package.json  process_subtitle.py  readme.md  requirements.txt  search-results.html  search.py  search_music.py  search_videos.py  semantic-search-app.py  semantic_search_logic.py  semantic_search_vtt.py  server.js  style.css  subtitle_process_backend.py  video-player-style.css  video-player.html  video_scraper.py
hls-test/: index.html  server.js
launcher/: Cargo.toml  Makefile  README.md  build.rs  checks.h  config.h  index.html  json.hpp.bak  main.cpp  package-lock.json  package.json  process.h
launcher/src/: App.css  App.tsx  I18nContext.tsx  index.css  main.rs  main.tsx  types.ts
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: config.json  lib.rs
launcher/src/components/: EnvCheckTab.tsx  LauncherTab.tsx  NetworkCheckTab.tsx  SettingsTab.tsx
src/: concurrent-time-sort.py  convert2mp4.py  find_subtitle.py  generate_glossary.py  generate_subtitle.py  get_folder_playlist.py  get_music_info.py  index.html  lufs-meter-processor.js  music-app.js  music-player.html  process_subtitle.py  requirements.txt  search-results.html  search_music.py  search_videos.py  server.js  style.css  subtitle_process_backend.py  video-player-style.css  video-player.html  video_scraper.py
src/audio_processor/: Cargo.toml
src/audio_processor/pkg/: audio_processor.d.ts  audio_processor.js  audio_processor_bg.wasm  audio_processor_bg.wasm.d.ts  package.json
src/audio_processor/src/: lib.rs
