[package]
name = "launcher"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.27.2"
egui = "0.27.2"
sysinfo = "0.30"
ureq = "2.9.7"
crossbeam-channel = "0.5"
regex = "1.7"
once_cell = "1.18"

[build-dependencies]
embed-resource = "2"
