[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
ureq = "2.9.7"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
