[package]
name = "audio-processor"
version = "0.1.0"
edition = "2021"
description = "WASM audio processing module: ITU-R BS.1770 LUFS metering for Web Audio API"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
# 激进优化：体积和速度双重优先
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# 开发构建保留调试信息
opt-level = 1
